@@ -1,3 +1,6 @@
+Jun 21, 2021
+   fixed code to properly process features
+
 Jun 15, 2021
    updated scripts to better handle processed species list
 
